# haskellbook

./: 9.data.char.hs  9.std.hs  LICENSE  README.md  cipher.hs  eft.hs  myWords.hs  poemLines.hs
chapter10/: database.hs  fibs.hs  std.hs
chapter11/: binaryTree.hs  capitalize.hs  cipher.hs  expr.hs  goats.hs  patterns.hs  programmers.hs
chapter12/: either.hs  maybe.hs  natural.hs  stringPro.hs  unfold.hs  unfoldTree.hs  wordValidate.hs
chapter13/: exit.hs  gimmePerson.hs  palindrome.hs
chapter13/hangman/: hangman.cabal
chapter15/: chapter15.cabal
chapter15/exe/: Main.hs  MaybeMonoid.hs
chapter15/src/: First'.hs  Mem.hs  MonoidLaw.hs  Optional.hs  SemigroupLaw.hs  Trivial.hs
chapter16/functorExercise/: README.md  functorExercise.cabal
chapter17/: fixUpper.hs  lookup.hs  lookup1.hs  lookup3.hs
chapter17/listApplicative/: README.md  listApplicative.cabal
chapter18/: std.hs
chapter18/monadExercise/: README.md  monadExercise.cabal
chapter20/: instances.hs  lib.hs
chapter21/: s.hs  tree.hs
chapter22/: reader.hs  readerPractice.hs
chapter23/: State.hs  fizzbuzz.hs
chapter24/parser/: parser.cabal
chapter24/semVer/: semVer.cabal
chapter25/: bifunctor.hs  twinplicative.hs
chapter26/: eitherT.hs  embedded.hs  excite.hs  mt.hs  readerT.hs  stateT.hs
chapter26/hitCounter/: README.md  hitCounter.cabal
chapter27/: StrictList.hs  bottomOut.hs
chapter28/: profile.hs
chapter28/benchmark/: benchmark.cabal
chapter28/myDList/: README.md  myDList.cabal
chapter30/: tryCatch.hs
whyFpMatters/: integrate.hs  pi.hs  sqrt.hs
(+25 files in other folders)
