name:                chapter15
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chapter15#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chapter15
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , chapter15

library
  hs-source-dirs:      src
  exposed-modules:     Optional
                     , First'
                     , MonoidLaw
                     , SemigroupLaw
                     , Trivial
                     , Mem
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  default-language:    Haskell2010
